--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2556,5 +2556,108 @@ stories:
   state: Arizona
   domain: http://www.sonorannews.com/
   link: http://sonorannews.com/2019/07/09/is-french-the-language-of-the-future/
+images:
+- name: yosemite-yosemite-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-atari-asteroids.jpg
+- name: gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
+- name: birdhouse-birdhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-marcel-duchamp.jpg
+- name: white-house-lawn-white-house-window-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-attack-planes.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+- name: stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
+- name: paris-paris-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dry-skin.jpg
+- name: berlinwall2-berlinwall-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-deep-connections.jpg
+- name: supreme-court-supremecourt-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-bright-sand.jpg
+- name: oldhouse-oldhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-propaganda-leaflets.jpg
+- name: crow_ww2_dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_dresden.jpg
+- name: death-valley-death-valley-national-park-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-blocks.jpg
+- name: white-house-lawn-white-house-window.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window.jpg
+- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+- name: store-on-corner-store-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-satan-red.jpg
+- name: old-school-house-old-schoolhouse-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
+- name: aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
+- name: paris-paris-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colored-circuits.jpg
+- name: aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-solidies-planning-attack-blue-matrix.jpg
+- name: old-gas-pumps-oldgaspumps.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-horiz-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-horiz-circuit.png
+- name: bluelake-dark-rain-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-00-00.jpg
+- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+- name: liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+- name: sand-hand-sand-hand-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crabapple.jpg
+- name: christianity-christianity-under-construction-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
+- name: catacombs-catacombs-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
+- name: crow-crow-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colored-circuits.jpg
+- name: downtheline-downtheline-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
+- name: nyc-flag-nycflag-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
+- name: oldsmallboat-oldsmallboat-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-deep-connections.jpg
+- name: supreme-court-supremecourt-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-dream.jpg
+- name: mistywoods-babyfoot-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-plentiful.jpg
+- name: windowmountain-window-mountain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
+- name: fence-fence-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
+- name: dragon-desert-desert-dragon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-post-modern.jpg
+- name: old-cabin-oldcabin-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-missle.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
+- name: machine-road-machine-road-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-mucha-mult.jpg
+- name: paris-paris-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
+- name: stories-new-68-76-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-76-800-500-0-max-0-1--5.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-attack-planes.jpg
+- name: abandonedbuildings_monet_one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_monet_one.jpg
+- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
+- name: blossombar-yellow-collage-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-00-00.jpg
+- name: oldhousecars-house-old-cars-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
+- name: statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-bright-sand.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-hot-spicy.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
 ---
 City Approves Ordinance For Places Of Worship With Revisions.&nbsp;How Small Business Sellers Make The Most Of Prime Day.&nbsp;Senior Center Nearing Completion.&nbsp;Fort Worth Venue The Rail Club To Reopen After Owners Legal Battles.&nbsp;Knee High U2026 Slowly But Surely.&nbsp;Water Shortages Plague Konawa.&nbsp;Melco Resorts Finance Announces Pricing Of Senior Notes Offering.&nbsp;New Orleans Floods As Storm Approaches.&nbsp;
